--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,22 @@
+:root{
+    --clr-dark:black;
+    --clr-light: #f1f5f9;
+    --clr-accent: #f1f5f9;
+}
+*,
+*::before,
+*::after{
+    box-sizing: border-box;
+}
+
 body{
     margin: 0;
     padding: 0;
     line-height: 1.6;
     word-spacing: 1.4px;
     font-family: 'Roboto', sans-serif;
-    color: black;
-    background-color: aliceblue;
+    color: var(--clr-dark)
+    background-color: var(--clr-light);
     display: flex;
     justify-content: center;
     height: 100vh;
